--- a/demo.html
+++ b/demo.html
@@ -6,7 +6,10 @@
     <script src="jquery.placeholder.js"></script>
     <title>jQuery-Placeholder</title>
     <style>
-    input {padding:4px; width:225px;}
+    body {font-family: arial, sans-serif;}
+    input, textarea {padding:4px; width:225px; font-family: arial, sans-serif; font-size: 12px;}
+    textarea {width: 425px; height: 200px;}
+    .placeholder {color: #aaa;}
     </style>
 </head>
 <body>
@@ -20,9 +23,12 @@
         <p>
             <input type="password" placeholder="password" name="password">
         </p>
+        <p>
+            <textarea placeholder="A textarea placeholder" name="test"></textarea>
+        </p>
     </form>
 <script>
-    $(':text[placeholder],:password[placeholder]').placeholder();
+    $(':text[placeholder],:password[placeholder], textarea[placeholder]').placeholder();
 </script>
 </body>
 </html>
