--- a/demo.html
+++ b/demo.html
@@ -28,7 +28,7 @@
         </p>
     </form>
 <script>
-    $(':text[placeholder],:password[placeholder], textarea[placeholder]').placeholder();
+    $('input[placeholder], textarea[placeholder]').placeholder();
 </script>
 </body>
 </html>
