removed redundant support chechk

--- a/demo.html
+++ b/demo.html
@@ -26,9 +26,12 @@
         <p>
             <textarea placeholder="A textarea placeholder" name="test"></textarea>
         </p>
+        <p>
+            <button type="submit">Go</button>
+        </p>
     </form>
 <script>
-    $('input[placeholder], textarea[placeholder]').placeholder();
+    console.log( $('input[placeholder], textarea[placeholder]').placeholder() );
 </script>
 </body>
 </html>
