removed console log from demo

--- a/demo.html
+++ b/demo.html
@@ -31,7 +31,7 @@
         </p>
     </form>
 <script>
-    console.log( $('input[placeholder], textarea[placeholder]').placeholder() );
+    $('input[placeholder], textarea[placeholder]').placeholder();
 </script>
 </body>
 </html>
