cleaned up some tests

--- a/tests/env-JS.html
+++ b/tests/env-JS.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <h1>jQuery-Placeholder</h1>
-    <p>env-JS test. Try setting the values with javascript and then submitting the form.</p>
+    <p>Env-JS test. Try setting the values with javascript and then submitting the form.</p>
     <form action="">
         <p>
             <input id="test-field" type="text" placeholder="test field" name="test-field">
