--- a/tests/IE_textcursor.html
+++ b/tests/IE_textcursor.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset=utf-8>
-    <title>IE cursor</title>
+    <meta charset="utf-8">
+    <title>IE Text Cursor Test - jQuery-Placeholder</title>
 </head>
-<body>
-    <form action="">
+<body> 
+    <h1>IE Text Cursor Test</h1>
+    <p><a href="https://github.com/danielstocks/jQuery-Placeholder/issues/closed#issue/8">Related Ticket</a></p>
+    <form action="#">
         <h2>With Placeholders</h2>
-        <p><input type="text" placeholder="qwe" name="qwe"></p>
-        <p><input type="text" placeholder="jkl" name="jkl"></p>
-        <p><input type="text" placeholder="jkl" name="jkl"></p>
-        <p><input type="text" placeholder="jkl" name="jkl"></p>
+            <p><input type="text" placeholder="qwe" name="a"></p>
+            <p><input type="text" placeholder="jkl" name="b"></p>
+            <p><input type="text" placeholder="jkl" name="c"></p>
+            <p><input type="text" placeholder="jkl" name="d"></p>
         <h2>No placeholders</h2>
-        <p><input type="text" name="qwe"></p>
-        <p><input type="text" name="jkl"></p>
-        <p><input type="text" name="jkl"></p>
-        <p><input type="text" name="jkl"></p>
+            <p><input type="text" name="e"></p>
+            <p><input type="text" name="f"></p>
+            <p><input type="text" name="g"></p>
+            <p><input type="text" name="h"></p>
         </form>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+    <script src="../jquery.placeholder.js"></script>
+    <script>$("input[placeholder]").placeholder();</script>
 </body>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-<script src="../jquery.placeholder.js"></script>
-<script>
-$(function(){
-	$("input[placeholder]").placeholder();
-});
-</script>
 </html>
